Removing unnecessary noise and Maven flags.